[gd_scene load_steps=8 format=2]

[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BaseGame/Game3/Game3.gd" type="Script" id=2]
[ext_resource path="res://Music/181858__timgormly__training-program-incorrect1.wav" type="AudioStream" id=3]
[ext_resource path="res://Music/531510__eponn__correct-blips.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="Game3" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_top = 2.0
margin_right = 1280.0
margin_bottom = 722.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG"]
margin_right = 1279.0
margin_bottom = 722.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Wait for it..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="HBoxContainer" parent="GameContainer"]
margin_right = 1280.0
margin_bottom = 358.0
size_flags_vertical = 3

[node name="Green" type="ColorRect" parent="GameContainer/Top"]
margin_right = 317.0
margin_bottom = 358.0
size_flags_horizontal = 3
color = Color( 0.529412, 0.952941, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameContainer/Top/Green"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Orange" type="ColorRect" parent="GameContainer/Top"]
margin_left = 321.0
margin_right = 638.0
margin_bottom = 358.0
size_flags_horizontal = 3
color = Color( 0.972549, 0.47451, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameContainer/Top/Orange"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.75812
margin_right = -1.75812
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blue" type="ColorRect" parent="GameContainer/Top"]
margin_left = 642.0
margin_right = 959.0
margin_bottom = 358.0
size_flags_horizontal = 3
color = Color( 0.227451, 0.219608, 0.898039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameContainer/Top/Blue"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White" type="ColorRect" parent="GameContainer/Top"]
margin_left = 963.0
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 3
color = Color( 0.866667, 0.866667, 0.866667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameContainer/Top/White"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="HBoxContainer" parent="GameContainer"]
margin_top = 362.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="Red" type="ColorRect" parent="GameContainer/Bottom"]
margin_right = 317.0
margin_bottom = 358.0
size_flags_horizontal = 3
color = Color( 0.909804, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameContainer/Bottom/Red"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Purple" type="ColorRect" parent="GameContainer/Bottom"]
margin_left = 321.0
margin_right = 638.0
margin_bottom = 358.0
size_flags_horizontal = 3
color = Color( 0.490196, 0.305882, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameContainer/Bottom/Purple"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="ColorRect" parent="GameContainer/Bottom"]
margin_left = 642.0
margin_right = 959.0
margin_bottom = 358.0
size_flags_horizontal = 3
color = Color( 0.172549, 0.172549, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameContainer/Bottom/Black"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.75806
margin_bottom = -1.75806
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yellow" type="ColorRect" parent="GameContainer/Bottom"]
margin_left = 963.0
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 3
color = Color( 0.87451, 0.866667, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameContainer/Bottom/Yellow"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "CLICK!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.87, 0.21, 0.21, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="ColorRect2/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 358.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Your Average Time:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/VBoxContainer"]
margin_top = 362.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="Restart" type="Button" parent="ColorRect2/VBoxContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 358.0
size_flags_horizontal = 3
flat = true

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer/HBoxContainer/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Restart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="ColorRect2/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 3
flat = true

[node name="Label2" type="Label" parent="ColorRect2/VBoxContainer/HBoxContainer/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Correct" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "FX"

[node name="Incorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "FX"
[connection signal="button_down" from="GameContainer/Top/Green/Button" to="." method="_on_Button_button_down" binds= [ "Green" ]]
[connection signal="button_up" from="GameContainer/Top/Green/Button" to="." method="_on_Button_button_up" binds= [ "Green" ]]
[connection signal="button_down" from="GameContainer/Top/Orange/Button" to="." method="_on_Button_button_down" binds= [ "Orange" ]]
[connection signal="button_up" from="GameContainer/Top/Orange/Button" to="." method="_on_Button_button_up" binds= [ "Orange" ]]
[connection signal="button_down" from="GameContainer/Top/Blue/Button" to="." method="_on_Button_button_down" binds= [ "Blue" ]]
[connection signal="button_up" from="GameContainer/Top/Blue/Button" to="." method="_on_Button_button_up" binds= [ "Blue" ]]
[connection signal="button_down" from="GameContainer/Top/White/Button" to="." method="_on_Button_button_down" binds= [ "White" ]]
[connection signal="button_up" from="GameContainer/Top/White/Button" to="." method="_on_Button_button_up" binds= [ "White" ]]
[connection signal="button_down" from="GameContainer/Bottom/Red/Button" to="." method="_on_Button_button_down" binds= [ "Red" ]]
[connection signal="button_up" from="GameContainer/Bottom/Red/Button" to="." method="_on_Button_button_up" binds= [ "Red" ]]
[connection signal="button_down" from="GameContainer/Bottom/Purple/Button" to="." method="_on_Button_button_down" binds= [ "Purple" ]]
[connection signal="button_up" from="GameContainer/Bottom/Purple/Button" to="." method="_on_Button_button_up" binds= [ "Purple" ]]
[connection signal="button_down" from="GameContainer/Bottom/Black/Button" to="." method="_on_Button_button_down" binds= [ "Black" ]]
[connection signal="button_up" from="GameContainer/Bottom/Black/Button" to="." method="_on_Button_button_up" binds= [ "Black" ]]
[connection signal="button_down" from="GameContainer/Bottom/Yellow/Button" to="." method="_on_Button_button_down" binds= [ "Yellow" ]]
[connection signal="button_up" from="GameContainer/Bottom/Yellow/Button" to="." method="_on_Button_button_up" binds= [ "Yellow" ]]
[connection signal="pressed" from="ColorRect2/VBoxContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
